--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <script src="/socket.io/socket.io.js"></script>
 <script>
-  var socket = io.connect('http://localhost');
+  var socket = io.connect('http://192.168.33.110');
   //socket.emit('my other event', { my: 'data' });
-  socket.emit('takeoff');
+  //socket.emit('takeoff');
 </script>
