adding leap stuff

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <script src="/socket.io/socket.io.js"></script>
+<script src="/leapcopter.js"></script>
 <script>
   var socket = io.connect('http://192.168.33.110');
   //socket.emit('my other event', { my: 'data' });
