--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<style>
+    body {
+        background-color: #000;
+    }
+    .camera {
+        background-repeat: no-repeat;
+        background-position: center;
+        background-attachment: fixed;
+        -webkit-background-size: cover;
+    }
+</style>
 <script src="/socket.io/socket.io.js"></script>
 <script src="http://js.leapmotion.com/0.2.1/leap.js"></script>
 <script>
