--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script src="http://js.leapmotion.com/0.2.1/leap.js"></script>
 <script>
   var socket = io.connect('http://192.168.33.110');
+  //var socket = io.connect('http://localhost');
   //socket.emit('my other event', { my: 'data' });
   //socket.emit('takeoff');
 </script>
