--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
 </style>
 <script src="/socket.io/socket.io.js"></script>
-<script src="http://js.leapmotion.com/0.2.1/leap.js"></script>
+<script src="/js/leap.js"></script>
 <script>
   var socket = io.connect('http://192.168.33.110');
   //var socket = io.connect('http://localhost');
