--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
   if(io) {
     var socket = io.connect('http://localhost');
   }
+  //var socket = io.connect('http://192.168.33.110');
   //socket.emit('my other event', { my: 'data' });
   //socket.emit('takeoff');
 </script>
