--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         background-image: url("http://localhost:8020");
     }
     #camera3.show {
-        background-image: url("http://files.tested.com/uploads/0/5/33854-ardrone_20_teaser.jpg");
+        background-image: url("http://localhost:8030");
     }
     #camera4.show {
-        background-image: url("http://files.tested.com/uploads/0/5/33854-ardrone_20_teaser.jpg");
+        background-image: url("http://localhost:8040");
     }
 .animated{-webkit-animation-fill-mode:both;-moz-animation-fill-mode:both;-ms-animation-fill-mode:both;-o-animation-fill-mode:both;animation-fill-mode:both;-webkit-animation-duration:3s;-moz-animation-duration:1s;-ms-animation-duration:1s;-o-animation-duration:1s;animation-duration:3s;}
 .animated.hinge{-webkit-animation-duration:1s;-moz-animation-duration:1s;-ms-animation-duration:1s;-o-animation-duration:1s;animation-duration:1s;}@-webkit-keyframes fadeOutDownBig {
